crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__error_missing_equals.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ x 1 }"
---
Record(
    Equals(
        1,
        5,
    ),
    1,
    1,
)
