crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__error_trailing_comma.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ x = 1, }"
---
Record(
    Field(
        1,
        10,
    ),
    1,
    1,
)
