crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__error_unclosed.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ x = 1"
---
Record(
    End(
        1,
        8,
    ),
    1,
    1,
)
