crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__error_uppercase_field.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ X = 1 }"
---
Record(
    Open(
        1,
        3,
    ),
    1,
    1,
)
